# azure-search-rag-kit

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
examples/: basic_search.py  batch_upload.py  filtered_search.py
schemas/: index_schema.json
src/: __init__.py  search_client.py
tests/: __init__.py  conftest.py  test_search_client.py
